# reproduce_spdlog_warning

./: CMakeLists.txt  conanfile.txt  main.cpp
include/my_header/: my_header.h
source/: my_header.cpp
